--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
   },
   "homepage": "https://github.com/ash-developer/winston-logs-display",
   "dependencies": {
-    "express": "^4.9.4",
-    "jade": "^1.7.0",
+    "express": "^4.17.1",
+    "pug": "^2.0.4",
     "serve-static": "^1.10.1",
-    "winston": "^0.8.3"
+    "winston": "^3.2.1"
   }
 }
